# inferno-engine

./: readme.md
app/: Cargo.toml
app/src/: lib.rs
game/: Cargo.toml
game/src/: lib.rs
inferno_engine/: Cargo.toml
inferno_engine/assets/shaders/: compute_shader.comp  default.frag  default.vert
inferno_engine/shared/src/: lib.rs
inferno_engine/src/: lib.rs  line.rs  main.rs  reload.rs  shaders.rs  texture.rs  window.rs
inferno_engine/src/primitives/: quad.rs
main/: .gitignore  Cargo.toml
main/src/: main.rs
