[package]
name = "inferno_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgfx-rs = "0.16.0"
glfw = "0.49.1"
raw-window-handle = "0.5.0"
glam = "0.22.0"
libloading = "0.7.4"
shared = { path = "shared", features = ["export"] }