[package]
name = "inferno_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.51.0"
raw-window-handle = "0.5.0"
glow = "0.12.1"
glam = "0.23.0"
libloading = "0.7.4"
shared = { path = "shared", features = ["export"] }
